exercises/01-network-policy-restrict/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: g04
spec:
  podSelector: {}
  policyTypes:
    - Ingress
